--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/tutorregistration.htm",
+      "source": "/tutorregistration.html",
       "destination": "/tutorregistration.html"
     }
   ]
